# seasonality-analyzer

./: .env.example  .gitignore  README.md
data/: sample_sensor_data.csv  sample_sensor_data_test.csv
exploration/: README.md  exploration.ipynb  requirements.txt
exploration/results/exploration/: seasonality_scores_ranking.csv
pipeline/: .gitignore  PIPELINE_USAGE_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
pipeline/config/: default.yaml  exploratory_mode.yaml  strict_mode.yaml
pipeline/reference/: README.md  llm_client.py
pipeline/results/exploration/: descriptive_statistics.csv
pipeline/src/seasonality/: __init__.py  cli.py  config.py
pipeline/src/seasonality/debug/: __init__.py  anonymizer.py  bundler.py  llm_client.py  prompts.py
pipeline/src/seasonality/detection/: __init__.py  acf.py  base.py  ensemble.py  fourier.py  periodogram.py  stl.py
pipeline/src/seasonality/io/: __init__.py  loader.py  writer.py
pipeline/src/seasonality/preprocessing/: __init__.py  changepoint.py  impute.py  outlier.py  resample.py
pipeline/src/seasonality/scoring/: __init__.py  metrics.py  ranking.py
pipeline/src/seasonality/utils/: __init__.py  japanese_font.py  logging.py  profiling.py
pipeline/src/seasonality/visualization/: __init__.py  decomposition.py  report.py  summary.py
pipeline/tests/: __init__.py  conftest.py  test_cli.py  test_detection.py  test_preprocessing.py  test_scoring.py
pipeline/tests/data/: __init__.py  synthetic.py
